--- a/gallery.html
+++ b/gallery.html
@@ -51,50 +51,50 @@
 	</head>
 	<body>
 
-	<nav id="colorlib-main-nav" role="navigation">
-		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
-		<div class="js-fullheight colorlib-table">
-			<div class="colorlib-table-cell js-fullheight">
-				<div class="row">
-					<div class="col-md-12">
-						<div class="form-group">
-							<input type="text" class="form-control" id="search" placeholder="Enter any key to search...">
-							<button type="submit" class="btn btn-primary"><i class="icon-search3"></i></button>
+		<nav id="colorlib-main-nav" role="navigation">
+			<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
+			<div class="js-fullheight colorlib-table">
+				<div class="colorlib-table-cell js-fullheight">
+					<!-- <div class="row">
+						<div class="col-md-12">
+							<div class="form-group">
+								<input type="text" class="form-control" id="search" placeholder="Enter any key to search...">
+								<button type="submit" class="btn btn-primary"><i class="icon-search3"></i></button>
+							</div>
+						</div>
+					</div> -->
+					<div class="row">
+						<div class="col-md-12">
+							<ul>
+								<li><a href="index.html">Home</a></li>
+								<li><a href="services.html">Services</a></li>
+								<li><a href="work.html">Work</a></li>
+								<li class="active"><a href="gallery.html">Gallery</a></li>
+								<li><a href="about.html">About</a></li>
+								<!-- <li><a href="contact.html">Contact</a></li> -->
+							</ul>
 						</div>
 					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-12">
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="services.html">Services</a></li>
-							<li><a href="work.html">Work</a></li>
-							<li class="active"><a href="blog.html">Blog</a></li>
-							<li><a href="about.html">About</a></li>
-							<li><a href="contact.html">Contact</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-12">
-						<h2 class="head-title">Works</h2>
-						<a href="images/work-1.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-1.jpg);">
-							<span><i class="icon-search3"></i></span>
-						</a>
-						<a href="images/work-2.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-2.jpg);">
-							<span><i class="icon-search3"></i></span>
-						</a>
-						<a href="images/work-3.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-3.jpg);">
-							<span><i class="icon-search3"></i></span>
-						</a>
-						<a href="images/work-4.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-4.jpg);">
-							<span><i class="icon-search3"></i></span>
-						</a>
-					</div>
+					<!-- <div class="row">
+						<div class="col-md-12">
+							<h2 class="head-title">Works</h2>
+							<a href="images/work-1.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-1.jpg);">
+								<span><i class="icon-search3"></i></span>
+							</a>
+							<a href="images/work-2.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-2.jpg);">
+								<span><i class="icon-search3"></i></span>
+							</a>
+							 <a href="images/work-3.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-3.jpg);">
+								<span><i class="icon-search3"></i></span>
+							</a>
+							<a href="images/work-4.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-4.jpg);">
+								<span><i class="icon-search3"></i></span> 
+							</a>
+						</div>
+					</div> -->
 				</div>
 			</div>
-		</div>
-	</nav>
+		</nav>
 	
 	<div id="colorlib-page">
 		<header>
@@ -102,7 +102,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="colorlib-navbar-brand">
-							<a class="colorlib-logo" href="index.html"><span>No</span><span>ah</span></a>
+							<a class="colorlib-logo" href="index.html"><span>ja</span><span>mn</span></a>
 						</div>
 						<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 					</div>
@@ -113,18 +113,18 @@
 		<div id="colorlib-blog">
 			<div class="container">
 				<div class="row text-center">
-					<h2 class="bold">Blog</h2>
+					<h2 class="bold">Gallery</h2>
 				</div>
 				<div class="row">
 					<div class="col-md-12 col-md-offset-0 text-center animate-box intro-heading">
-						<span>Blog</span>
-						<h2>Read Our Case</h2>
+						<span>Gallery</span>
+						<h2>I do modeling for fun</h2>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-12">
 						<div class="rotate">
-							<h2 class="heading">Our Blog</h2>
+							<h2 class="heading">My Narcissism</h2>
 						</div>
 					</div>
 				</div>
@@ -132,20 +132,19 @@
 					<div class="col-md-4">
 						<div class="article animate-box">
 							<a href="blog.html" class="blog-img">
-								<img class="img-responsive" src="images/img-1.jpg" alt="html5 bootstrap by colorlib.com">
+								<img class="img-responsive" src="images/gallery2_2.jpg" alt="html5 bootstrap by colorlib.com">
 								<div class="overlay"></div>
 								<div class="link">
 									<span class="read">Read more</h2>
 								</div>
 							</a>
 							<div class="desc">
-								<span class="meta">15, Feb 2018</span>
-								<h2><a href="blog.html">A Japanese Constellation</a></h2>
-								<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p>
+								<span class="meta">Feb. 2019</span>
+								<h2><a href="blog.html">Uniform Day</a></h2>
+								<p>Friends and laughter, adventures and memories, reliving the golden years of youth back in high school.</p>
 							</div>
 						</div>
-
-						<div class="article animate-box">
+						<!-- <div class="article animate-box">
 							<a href="blog.html" class="blog-img">
 								<img class="img-responsive" src="images/img-4.jpg" alt="html5 bootstrap by colorlib.com">
 								<div class="overlay"></div>
@@ -173,27 +172,27 @@
 								<h2><a href="blog.html">A Japanese Constellation</a></h2>
 								<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p>
 							</div>
-						</div>
+						</div> -->
 					</div>
 
 
 					<div class="col-md-4">
+
 						<div class="article animate-box">
 							<a href="blog.html" class="blog-img">
-								<img class="img-responsive" src="images/img-2.jpg" alt="html5 bootstrap by colorlib.com">
+								<img class="img-responsive" src="images/gallery4_1.jpg" alt="html5 bootstrap by colorlib.com">
 								<div class="overlay"></div>
 								<div class="link">
 									<span class="read">Read more</h2>
 								</div>
 							</a>
 							<div class="desc">
-								<span class="meta">15, Feb 2018</span>
-								<h2><a href="blog.html">A Japanese Constellation</a></h2>
-								<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p>
+								<span class="meta">Mar. 2021</span>
+								<h2><a href="blog.html">Treasure Hill Artist Village</a></h2>
+								<p>Mysterious figures shrouded in darkness, executing missions with precision and secrecy.</p>
 							</div>
 						</div>
-						
-						<div class="article animate-box">
+						<!-- <div class="article animate-box">
 							<a href="blog.html" class="blog-img">
 								<img class="img-responsive" src="images/img-5.jpg" alt="html5 bootstrap by colorlib.com">
 								<div class="overlay"></div>
@@ -221,27 +220,27 @@
 								<h2><a href="blog.html">A Japanese Constellation</a></h2>
 								<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p>
 							</div>
-						</div>
+						</div> -->
 					</div>
 
 
 					<div class="col-md-4">
+					
 						<div class="article animate-box">
 							<a href="blog.html" class="blog-img">
-								<img class="img-responsive" src="images/img-3.jpg" alt="html5 bootstrap by colorlib.com">
+								<img class="img-responsive" src="images/gallery1_3.jpg" alt="html5 bootstrap by colorlib.com">
 								<div class="overlay"></div>
 								<div class="link">
 									<span class="read">Read more</h2>
 								</div>
 							</a>
 							<div class="desc">
-								<span class="meta">15, Feb 2018</span>
-								<h2><a href="blog.html">A Japanese Constellation</a></h2>
-								<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p>
+								<span class="meta">Apr. 2021</span>
+								<h2><a href="blog.html">An Abandon Theme Park</a></h2>
+								<p>Nature's golden farewell, painting a breathtaking backdrop against the decaying remnants of a forgotten dreamy land.</p>
 							</div>
 						</div>
-
-						<div class="article animate-box">
+						<!-- <div class="article animate-box">
 							<a href="blog.html" class="blog-img">
 								<img class="img-responsive" src="images/img-6.jpg" alt="html5 bootstrap by colorlib.com">
 								<div class="overlay"></div>
@@ -269,7 +268,7 @@
 								<h2><a href="blog.html">A Japanese Constellation</a></h2>
 								<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p>
 							</div>
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</div>
@@ -282,51 +281,18 @@
 					<div class="row">
 						<div class="col-md-4 col-pb-sm">
 							<div class="row">
-								<div class="col-md-10">
-									<h2>Let's Talk</h2>
-									<p>A small river named Duden flows by their place and supplies.</p>
-									<p><a href="#">noah@info.com</a></p>
-									<p class="colorlib-social-icons">
-										<a href="#"><i class="icon-facebook4"></i></a>
-										<a href="#"><i class="icon-twitter3"></i></a>
-										<a href="#"><i class="icon-googleplus"></i></a>
-										<a href="#"><i class="icon-dribbble2"></i></a>
+							</div>
+						</div>
+						<div class="col-md-4 col-pb-sm">
+							<div class="col-md-10">
+								<h3>Chill, I won't bite.</h3>
+								<p>Feel free to find me at : </p>
+								<p class="colorlib-social-icons">
+									<a href="mailto:chen.jasm@northeastern.edu"><i class="icon-mail4"></i></a>
+									<a href="https://www.linkedin.com/in/jasmine-yj-chen/"><i class="icon-linkedin"></i></a>
+									<a href="https://github.com/JasmnC"><i class="icon-github"></i></a>
+									<a href="https://www.instagram.com/yuujadz/"><i class="icon-instagram"></i></a>
 									</p>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4 col-pb-sm">
-							<h2>Latest Blog</h2>
-							<div class="f-entry">
-								<a href="#" class="featured-img" style="background-image: url(images/img-1.jpg);"></a>
-								<div class="desc">
-									<span>February 15, 2018</span>
-									<h3><a href="#">Art Gallery in Japan</a></h3>
-								</div>
-							</div>
-							<div class="f-entry">
-								<a href="#" class="featured-img" style="background-image: url(images/img-2.jpg);"></a>
-								<div class="desc">
-									<span>February 9, 2018</span>
-									<h3><a href="#">A Japanese Constellation</a></h3>
-								</div>
-							</div>
-							<div class="f-entry">
-								<a href="#" class="featured-img" style="background-image: url(images/img-3.jpg);"></a>
-								<div class="desc">
-									<span>February 15, 2018</span>
-									<h3><a href="#">Road Trip</a></h3>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4 col-pb-sm">
-							<h2>Newsletter</h2>
-							<p>A small river named Duden flows by their place and supplies it with the necessary regelialia</p>
-							<div class="subscribe text-center">
-								<div class="form-group">
-									<input type="text" class="form-control text-center" placeholder="Enter Email address">
-									<input type="submit" value="Subscribe" class="btn btn-primary btn-custom">
-								</div>
 							</div>
 						</div>
 					</div>
@@ -334,7 +300,7 @@
 						<div class="col-md-12 text-center">
 							<p>
 								&copy; <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart4" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This site is made with <i class="icon-heart4" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">JasmnC</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 							</p>
 						</div>
