--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
 		<div class="js-fullheight colorlib-table">
 			<div class="colorlib-table-cell js-fullheight">
-				<div class="row">
+				<!-- <div class="row">
 					<div class="col-md-12">
 						<div class="form-group">
 							<input type="text" class="form-control" id="search" placeholder="Enter any key to search...">
 							<button type="submit" class="btn btn-primary"><i class="icon-search3"></i></button>
 						</div>
 					</div>
-				</div>
+				</div> -->
 				<div class="row">
 					<div class="col-md-12">
 						<ul>
@@ -71,11 +71,11 @@
 							<li><a href="work.html">Work</a></li>
 							<li><a href="gallery.html">Gallery</a></li>
 							<li><a href="about.html">About</a></li>
-							<li><a href="contact.html">Contact</a></li>
+							<!-- <li><a href="contact.html">Contact</a></li> -->
 						</ul>
 					</div>
 				</div>
-				<div class="row">
+				<!-- <div class="row">
 					<div class="col-md-12">
 						<h2 class="head-title">Works</h2>
 						<a href="images/work-1.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-1.jpg);">
@@ -84,14 +84,14 @@
 						<a href="images/work-2.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-2.jpg);">
 							<span><i class="icon-search3"></i></span>
 						</a>
-						<a href="images/work-3.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-3.jpg);">
+						 <a href="images/work-3.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-3.jpg);">
 							<span><i class="icon-search3"></i></span>
 						</a>
 						<a href="images/work-4.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-4.jpg);">
-							<span><i class="icon-search3"></i></span>
+							<span><i class="icon-search3"></i></span> 
 						</a>
 					</div>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</nav>
@@ -139,7 +139,7 @@
 								<div class="rotate">
 									<h2 class="heading">Claims</h2>
 								</div>
-								<p>A normal cat-lover who also love dogs, because it's <a href="#">fxxking reasonable. </a> Dog lovers are exclusive, they usually don't like cats. Large dog lovers and small dog lovers even fight against each other. Whereas we cat lovers are simply <a href="#">open-minded and respectful.</a> </p>
+								<p>Current Masters student of Information Systems at Northeastern University;<br>Software engineer with business background, and <br> <a href="#">activly searching for intern/co-op opportunities.</a></p>
 								<p class="colorlib-social-icons">
 									<a href="mailto:chen.jasm@northeastern.edu"><i class="icon-mail4"></i></a>
 									<a href="https://www.linkedin.com/in/jasmine-yj-chen/"><i class="icon-linkedin"></i></a>
@@ -217,7 +217,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="one-forth services-img" style="background-image: url(images/services-img-1.jpg);">
+							<div class="one-forth services-img" style="background-image: url(images/gitprofile.png);" >
 							</div>
 						</div>
 					</div>
@@ -225,7 +225,7 @@
 			</div>
 		</div>
 
-		<div id="colorlib-work">
+		<!-- <div id="colorlib-work">
 			<div class="container">
 				<div class="row text-center">
 					<h2 class="bold">Works</h2>
@@ -260,7 +260,7 @@
 								</div>
 							</div>
 						</div>
-					</div>
+					</div> -->
 					<!-- <div class="col-md-12">
 						<div class="work-entry animate-box">
 							<a href="work.html" class="work-img" style="background-image: url(images/work-2.jpg);">
@@ -295,7 +295,7 @@
 							</div>
 						</div>
 					</div> -->
-					<div class="col-md-12">
+					<!-- <div class="col-md-12">
 						<div class="work-entry animate-box">
 							<a href="work.html" class="work-img" style="background-image: url(images/work-4.jpg);">
 								<div class="display-t">
@@ -314,7 +314,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 
 		<div id="colorlib-blog">
 			<div class="container">
@@ -324,13 +324,13 @@
 				<div class="row">
 					<div class="col-md-12 col-md-offset-0 text-center animate-box intro-heading">
 						<span>Gallery</span>
-						<h2>Yes, I do shooting for fun</h2>
+						<h2>Yes, I do modeling for fun</h2>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-12">
 						<div class="rotate">
-							<h2 class="heading">Our Blog</h2>
+							<h2 class="heading">My Narcissism</h2>
 						</div>
 					</div>
 				</div>
@@ -340,16 +340,16 @@
 							<div class="col-md-12">
 								<div class="article">
 									<a href="gallery.html" class="blog-img">
-										<img class="img-responsive" src="images/img-1.jpg" alt="html5 bootstrap by colorlib.com">
+										<img class="img-responsive" src="images/gallery4_1.jpg" alt="html5 bootstrap by colorlib.com">
 										<div class="overlay"></div>
 										<div class="link">
 											<span class="read">Read more</h2>
 										</div>
 									</a>
 									<div class="desc">
-										<span class="meta">15, Feb 2018</span>
-										<h2><a href="gallery.html">A Japanese Constellation</a></h2>
-										<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p>
+										<span class="meta">Mar. 2021</span>
+										<h2><a href="gallery.html">Treasure Hill Artist Village</a></h2>
+										<p>Mysterious figures shrouded in darkness, executing missions with precision and secrecy.</p>
 									</div>
 								</div>
 							</div>
@@ -358,16 +358,16 @@
 							<div class="col-md-12">
 								<div class="article">
 									<a href="gallery.html" class="blog-img">
-										<img class="img-responsive" src="images/img-2.jpg" alt="html5 bootstrap by colorlib.com">
+										<img class="img-responsive" src="images/gallery1_3.jpg" alt="html5 bootstrap by colorlib.com">
 										<div class="overlay"></div>
 										<div class="link">
 											<span class="read">Read more</h2>
 										</div>
 									</a>
 									<div class="desc">
-										<span class="meta">15, Feb 2018</span>
-										<h2><a href="gallery.html">A Japanese Constellation</a></h2>
-										<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p>
+										<span class="meta">Apr. 2021</span>
+										<h2><a href="gallery.html">An Abandon Theme Park</a></h2>
+										<p>Nature's golden farewell, painting a breathtaking backdrop against the decaying remnants of a forgotten dreamy land.</p>
 									</div>
 								</div>
 							</div>
@@ -376,16 +376,16 @@
 							<div class="col-md-12">
 								<div class="article">
 									<a href="gallery.html" class="blog-img">
-										<img class="img-responsive" src="images/img-3.jpg" alt="html5 bootstrap by colorlib.com">
+										<img class="img-responsive" src="images/gallery2_2.jpg" alt="html5 bootstrap by colorlib.com">
 										<div class="overlay"></div>
 										<div class="link">
 											<span class="read">Read more</h2>
 										</div>
 									</a>
 									<div class="desc">
-										<span class="meta">15, Feb 2018</span>
+										<span class="meta">Feb. 2019</span>
 										<h2><a href="gallery.html">A Japanese Constellation</a></h2>
-										<p>When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove</p>
+										<p>Friends and laughter, adventures and memories, reliving the golden years of youth back in high school.</p>
 									</div>
 								</div>
 							</div>
@@ -396,7 +396,7 @@
 		</div>
 
 		<footer>
-			<div id="footer">
+			<!-- <div id="footer">
 				<div class="container">
 					<div class="row">
 						<div class="col-md-4 col-pb-sm">
@@ -415,7 +415,7 @@
 									</p>
 							</div>
 						</div>
-					</div>
+					</div> -->
 					<div class="row">
 						<div class="col-md-12 text-center">
 							<p>
