--- a/services.html
+++ b/services.html
@@ -51,50 +51,50 @@
 	</head>
 	<body>
 
-	<nav id="colorlib-main-nav" role="navigation">
-		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
-		<div class="js-fullheight colorlib-table">
-			<div class="colorlib-table-cell js-fullheight">
-				<div class="row">
-					<div class="col-md-12">
-						<div class="form-group">
-							<input type="text" class="form-control" id="search" placeholder="Enter any key to search...">
-							<button type="submit" class="btn btn-primary"><i class="icon-search3"></i></button>
+		<nav id="colorlib-main-nav" role="navigation">
+			<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
+			<div class="js-fullheight colorlib-table">
+				<div class="colorlib-table-cell js-fullheight">
+					<!-- <div class="row">
+						<div class="col-md-12">
+							<div class="form-group">
+								<input type="text" class="form-control" id="search" placeholder="Enter any key to search...">
+								<button type="submit" class="btn btn-primary"><i class="icon-search3"></i></button>
+							</div>
+						</div>
+					</div> -->
+					<div class="row">
+						<div class="col-md-12">
+							<ul>
+								<li><a href="index.html">Home</a></li>
+								<li class="active"><a href="services.html">Services</a></li>
+								<li><a href="work.html">Work</a></li>
+								<li><a href="gallery.html">Gallery</a></li>
+								<li><a href="about.html">About</a></li>
+								<!-- <li><a href="contact.html">Contact</a></li> -->
+							</ul>
 						</div>
 					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-12">
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li class="active"><a href="services.html">Services</a></li>
-							<li><a href="work.html">Work</a></li>
-							<li><a href="blog.html">Blog</a></li>
-							<li><a href="about.html">About</a></li>
-							<li><a href="contact.html">Contact</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-12">
-						<h2 class="head-title">Works</h2>
-						<a href="images/work-1.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-1.jpg);">
-							<span><i class="icon-search3"></i></span>
-						</a>
-						<a href="images/work-2.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-2.jpg);">
-							<span><i class="icon-search3"></i></span>
-						</a>
-						<a href="images/work-3.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-3.jpg);">
-							<span><i class="icon-search3"></i></span>
-						</a>
-						<a href="images/work-4.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-4.jpg);">
-							<span><i class="icon-search3"></i></span>
-						</a>
-					</div>
+					<!-- <div class="row">
+						<div class="col-md-12">
+							<h2 class="head-title">Works</h2>
+							<a href="images/work-1.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-1.jpg);">
+								<span><i class="icon-search3"></i></span>
+							</a>
+							<a href="images/work-2.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-2.jpg);">
+								<span><i class="icon-search3"></i></span>
+							</a>
+							 <a href="images/work-3.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-3.jpg);">
+								<span><i class="icon-search3"></i></span>
+							</a>
+							<a href="images/work-4.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-4.jpg);">
+								<span><i class="icon-search3"></i></span> 
+							</a>
+						</div>
+					</div> -->
 				</div>
 			</div>
-		</div>
-	</nav>
+		</nav>
 	
 	<div id="colorlib-page">
 		<header>
@@ -173,7 +173,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="one-forth services-img" style="background-image: url(images/services-img.jpg);">
+							<div class="one-forth services-img" style="background-image: url(images/gitprofile.png);">
 							</div>
 						</div>
 					</div>
@@ -241,14 +241,14 @@
 		                <span class="progress-right">
 		                    <span class="progress-bar"></span>
 		                </span>
-		                <div class="progress-value">80%</div>
+		                <div class="progress-value">85%</div>
 		            </div>
 		         </div>
 			   </div>
 			</div>
 		</div>
 
-		<div id="colorlib-testimony">
+		<!-- <div id="colorlib-testimony">
 			<div class="container">
 				<div class="row text-center">
 					<h2 class="bold">Testimonies</h2>
@@ -301,14 +301,14 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 
 		<footer>
 			<div id="footer">
 				<div class="container">
 					<div class="row">
 						<div class="col-md-4 col-pb-sm">
-							<div class="row">
+							<!-- <div class="row">
 								<div class="col-md-10">
 									<h2>Let's Talk</h2>
 									<p>A small river named Duden flows by their place and supplies.</p>
@@ -320,9 +320,9 @@
 										<a href="#"><i class="icon-dribbble2"></i></a>
 									</p>
 								</div>
-							</div>
+							</div> -->
 						</div>
-						<div class="col-md-4 col-pb-sm">
+						<!-- <div class="col-md-4 col-pb-sm">
 							<h2>Latest Blog</h2>
 							<div class="f-entry">
 								<a href="#" class="featured-img" style="background-image: url(images/img-1.jpg);"></a>
@@ -345,8 +345,20 @@
 									<h3><a href="#">Road Trip</a></h3>
 								</div>
 							</div>
-						</div>
+						</div> -->
 						<div class="col-md-4 col-pb-sm">
+							<div class="col-md-10">
+								<h3>Chill, I won't bite.</h3>
+								<p>Feel free to find me at : </p>
+								<p class="colorlib-social-icons">
+									<a href="mailto:chen.jasm@northeastern.edu"><i class="icon-mail4"></i></a>
+									<a href="https://www.linkedin.com/in/jasmine-yj-chen/"><i class="icon-linkedin"></i></a>
+									<a href="https://github.com/JasmnC"><i class="icon-github"></i></a>
+									<a href="https://www.instagram.com/yuujadz/"><i class="icon-instagram"></i></a>
+									</p>
+							</div>
+						</div>
+						<!-- <div class="col-md-4 col-pb-sm">
 							<h2>Newsletter</h2>
 							<p>A small river named Duden flows by their place and supplies it with the necessary regelialia</p>
 							<div class="subscribe text-center">
@@ -355,14 +367,14 @@
 									<input type="submit" value="Subscribe" class="btn btn-primary btn-custom">
 								</div>
 							</div>
-						</div>
+						</div> -->
 					</div>
 					<div class="row">
 						<div class="col-md-12 text-center">
 							<p>
 								&copy; <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart4" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+								Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This site is made with <i class="icon-heart4" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">JasmnC</a>
+								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 							</p>
 						</div>
 					</div>
