--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="services.html">Services</a></li>
 							<li><a href="work.html">Work</a></li>
-							<li><a href="blog.html">Blog</a></li>
+							<li><a href="gallery.html">Gallery</a></li>
 							<li class="active"><a href="about.html">About</a></li>
 							<li><a href="contact.html">Contact</a></li>
 						</ul>
@@ -120,12 +120,12 @@
 					</div>
 					<div class="col-md-6 col-md-push-1 animate-box">
 						<div class="about-desc">
-							<h2><span>Jasmine</span><span>Y-J Chen</span></h2>
+							<h2><span>Jasmine C.</span><span> Software Engineer</span><span>(and cat-lover</span></h2>
 							<div class="desc">
 								<div class="rotate">
 									<h2 class="heading">About</h2>
 								</div>
-								<p>Current Masters student of Information Systems at Northeastern University;<br>Software engineer with business background, and <br> <a href="#">activly searching for intern/co-op opportunities.</a></p>
+								<p>A normal cat-lover who also love dogs, because it's <a href="#">fxxking reasonable. </a> Dog lovers are exclusive, they usually don't like cats. Large dog lovers and small dog lovers even fight against each other. Whereas we cat lovers are simply <a href="#">open-minded and respectful.</a> </p>
 								<p class="colorlib-social-icons">
 									<a href="mailto:chen.jasm@northeastern.edu"><i class="icon-mail4"></i></a>
 									<a href="https://www.linkedin.com/in/jasmine-yj-chen/"><i class="icon-linkedin"></i></a>
@@ -153,7 +153,7 @@
 				</div>
 			</div>
 		</div>
-		<div id="colorlib-services">
+		<!-- <div id="colorlib-services">
 			<div class="container">
 				<div class="row text-center">
 					<h2 class="bold">Goals</h2>
@@ -197,7 +197,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 
 		<div id="colorlib-testimony">
 			<div class="container">
