--- a/contact.html
+++ b/contact.html
@@ -56,12 +56,12 @@
 		<div class="js-fullheight colorlib-table">
 			<div class="colorlib-table-cell js-fullheight">
 				<div class="row">
-					<div class="col-md-12">
+					<!-- <div class="col-md-12">
 						<div class="form-group">
 							<input type="text" class="form-control" id="search" placeholder="Enter any key to search...">
 							<button type="submit" class="btn btn-primary"><i class="icon-search3"></i></button>
 						</div>
-					</div>
+					</div> -->
 				</div>
 				<div class="row">
 					<div class="col-md-12">
@@ -69,9 +69,9 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="services.html">Services</a></li>
 							<li><a href="work.html">Work</a></li>
-							<li><a href="blog.html">Blog</a></li>
+							<li><a href="gallery.html">Gallery</a></li>
 							<li><a href="about.html">About</a></li>
-							<li class="active"><a href="contact.html">Contact</a></li>
+							<!-- <li class="active"><a href="contact.html">Contact</a></li> -->
 						</ul>
 					</div>
 				</div>
@@ -102,7 +102,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="colorlib-navbar-brand">
-							<a class="colorlib-logo" href="index.html"><span>No</span><span>ah</span></a>
+							<a class="colorlib-logo" href="index.html"><span>js</span><span>mn</span></a>
 						</div>
 						<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 					</div>
@@ -134,10 +134,10 @@
 							<div class="col-md-4 animate-box">
 								<h3>My Address</h3>
 								<ul class="contact-info">
-									<li><span><i class="icon-map5"></i></span>88 West 21th Street, Suite 721 New York NY 10016</li>
-									<li><span><i class="icon-phone4"></i></span>+ 1235 2355 98</li>
-									<li><span><i class="icon-envelope2"></i></span><a href="#">info@yoursite.com</a></li>
-									<li><span><i class="icon-globe3"></i></span><a href="#">www.yoursite.com</a></li>
+									<li><span><i class="icon-map5"></i></span>Update when I have my startup, somewhere in 10 years.</li>
+									<li><span><i class="icon-phone4"></i></span>(+1)213-284-1921</li>
+									<li><span><i class="icon-envelope2"></i></span><a href="#"> </a></li>
+									<li><span><i class="icon-globe3"></i></span><a href="#"></a></li>
 								</ul>
 							</div>
 							<div class="col-md-7 col-md-push-1 animate-box">
