--- a/gallery.html
+++ b/gallery.html
@@ -131,7 +131,7 @@
 				<div class="row">
 					<div class="col-md-4">
 						<div class="article animate-box">
-							<a href="blog.html" class="blog-img">
+							<a>
 								<img class="img-responsive" src="images/gallery2_2.jpg" alt="html5 bootstrap by colorlib.com">
 								<div class="overlay"></div>
 								<div class="link">
@@ -140,7 +140,7 @@
 							</a>
 							<div class="desc">
 								<span class="meta">Feb. 2019</span>
-								<h2><a href="blog.html">Uniform Day</a></h2>
+								<h2><a>Uniform Day</a></h2>
 								<p>Friends and laughter, adventures and memories, reliving the golden years of youth back in high school.</p>
 							</div>
 						</div>
@@ -179,7 +179,7 @@
 					<div class="col-md-4">
 
 						<div class="article animate-box">
-							<a href="blog.html" class="blog-img">
+							<a>
 								<img class="img-responsive" src="images/gallery4_1.jpg" alt="html5 bootstrap by colorlib.com">
 								<div class="overlay"></div>
 								<div class="link">
@@ -188,7 +188,7 @@
 							</a>
 							<div class="desc">
 								<span class="meta">Mar. 2021</span>
-								<h2><a href="blog.html">Treasure Hill Artist Village</a></h2>
+								<h2><a>Treasure Hill Artist Village</a></h2>
 								<p>Mysterious figures shrouded in darkness, executing missions with precision and secrecy.</p>
 							</div>
 						</div>
@@ -227,7 +227,7 @@
 					<div class="col-md-4">
 					
 						<div class="article animate-box">
-							<a href="blog.html" class="blog-img">
+							<a>
 								<img class="img-responsive" src="images/gallery1_3.jpg" alt="html5 bootstrap by colorlib.com">
 								<div class="overlay"></div>
 								<div class="link">
@@ -236,7 +236,7 @@
 							</a>
 							<div class="desc">
 								<span class="meta">Apr. 2021</span>
-								<h2><a href="blog.html">An Abandon Theme Park</a></h2>
+								<h2><a>An Abandon Theme Park</a></h2>
 								<p>Nature's golden farewell, painting a breathtaking backdrop against the decaying remnants of a forgotten dreamy land.</p>
 							</div>
 						</div>
