--- a/gallery.html
+++ b/gallery.html
@@ -131,7 +131,7 @@
 				<div class="row">
 					<div class="col-md-4">
 						<div class="article animate-box">
-							<a>
+							<a class="blog-img">
 								<img class="img-responsive" src="images/gallery2_2.jpg" alt="html5 bootstrap by colorlib.com">
 								<div class="overlay"></div>
 								<div class="link">
@@ -179,7 +179,7 @@
 					<div class="col-md-4">
 
 						<div class="article animate-box">
-							<a>
+							<a class="blog-img">
 								<img class="img-responsive" src="images/gallery4_1.jpg" alt="html5 bootstrap by colorlib.com">
 								<div class="overlay"></div>
 								<div class="link">
@@ -227,7 +227,7 @@
 					<div class="col-md-4">
 					
 						<div class="article animate-box">
-							<a>
+							<a class="blog-img">
 								<img class="img-responsive" src="images/gallery1_3.jpg" alt="html5 bootstrap by colorlib.com">
 								<div class="overlay"></div>
 								<div class="link">
