--- a/about.html
+++ b/about.html
@@ -55,14 +55,14 @@
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
 		<div class="js-fullheight colorlib-table">
 			<div class="colorlib-table-cell js-fullheight">
-				<div class="row">
+				<!--<div class="row">
 					<div class="col-md-12">
 						<div class="form-group">
 							<input type="text" class="form-control" id="search" placeholder="Enter any key to search...">
 							<button type="submit" class="btn btn-primary"><i class="icon-search3"></i></button>
 						</div>
 					</div>
-				</div>
+				</div>-->
 				<div class="row">
 					<div class="col-md-12">
 						<ul>
@@ -71,11 +71,10 @@
 							<li><a href="work.html">Work</a></li>
 							<li><a href="gallery.html">Gallery</a></li>
 							<li class="active"><a href="about.html">About</a></li>
-							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</div>
 				</div>
-				<div class="row">
+				<!-- <div class="row">
 					<div class="col-md-12">
 						<h2 class="head-title">Works</h2>
 						<a href="images/work-1.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/work-1.jpg);">
@@ -91,7 +90,7 @@
 							<span><i class="icon-search3"></i></span>
 						</a>
 					</div>
-				</div>
+				</div>-->
 			</div>
 		</div>
 	</nav>
