--- a/work.html
+++ b/work.html
@@ -130,7 +130,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
-							<a href="work-single.html" class="work-img" style="background-image: url(images/pawpal.png);">
+							<a class="work-img" style="background-image: url(images/pawpal.png);">
 								<div class="display-t">
 									<div class="work-name">
 										<h2>     Paw Pal   </h2>
@@ -147,7 +147,7 @@
 					</div>
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
-							<a href="work-single.html" class="work-img" style="background-image: url(images/wordpuzzle.png);">
+							<a  class="work-img" style="background-image: url(images/wordpuzzle.png);">
 								<div class="display-t">
 									<div class="work-name">
 										<h2>Word Puzzle Game</h2>
