project link update

--- a/work.html
+++ b/work.html
@@ -140,7 +140,7 @@
 							<div class="col-md-4 col-md-offset-4">
 								<div class="desc">
 									<p>This is an application that allows multiple stackholders to interact through the system, aims to makes the process of adopting street animals easy and secure.</p>
-									<p class="read"><a href="#">View details</a></p>
+									<p class="read"><a href="https://github.com/JasmnC/Final-Project-PawPal" target="_blank">View details</a></p>
 								</div>
 							</div>
 						</div>
@@ -157,7 +157,7 @@
 							<div class="col-md-4 col-md-offset-4">
 								<div class="desc">
 									<p>This is a word puzzle game, made for entertainment as well as to test ability with english languge.</p>
-									<p class="read"><a href="#">View Details</a></p>
+									<p class="read"><a href="https://github.com/JasmnC/Word-Puzzle-Game" target="_blank">View Details</a></p>
 								</div>
 							</div>
 						</div>
