work-plus rental added

--- a/work.html
+++ b/work.html
@@ -162,24 +162,24 @@
 							</div>
 						</div>
 					</div>
-					<!-- <div class="col-md-12">
+					<div class="col-md-12">
 						<div class="work-entry animate-box">
-							<a href="work-single.html" class="work-img" style="background-image: url(images/work-3.jpg);">
+							<a class="work-img" style="background-image: url(images/plus-rental.png);">
 								<div class="display-t">
 									<div class="work-name">
-										<h2>Cristall</h2>
+										<h2>Plus Rental</h2>
 									</div>
 								</div>
 							</a>
 							<div class="col-md-4 col-md-offset-4">
 								<div class="desc">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-									<p class="read"><a href="#">View details</a></p>
+									<p>A database pipeline designed for a rental car company. Included complete use cases for customers, employees, and business owners. </p>
+									<p class="read"><a href="https://github.com/JasmnC/PlusRental" target="_blank">View details</a></p>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="col-md-12">
+					<!-- <div class="col-md-12">
 						<div class="work-entry animate-box">
 							<a href="work-single.html" class="work-img" style="background-image: url(images/work-4.jpg);">
 								<div class="display-t">
