storybook project added

--- a/work.html
+++ b/work.html
@@ -127,6 +127,23 @@
 						</div>
 					</div>
 				</div>
+				<div class="col-md-12">
+					<div class="work-entry animate-box">
+						<a href="#" class="work-img" style="background-image: url(images/storybook.jpg);">
+							<div class="display-t">
+								<div class="work-name">
+									<h2>Storybook - Steer My Heart</h2>
+								</div>
+							</div>
+						</a>
+						<div class="col-md-4 col-md-offset-4">
+							<div class="desc">
+								<p>A python storybook inspired by a Japanese movie. Utilized advanced image processing techniques such as HED, brightness adjustment, blurring, border addition, and the generation of visually appealing storybook layouts with customized elements like subtitles and combined images.</p>
+								<p class="read"><a href="https://github.com/JasmnC/Steer-My-Heart" target="_blank">View details</a></p>
+							</div>
+						</div>
+					</div>
+				</div>
 				<div class="row">
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
@@ -180,23 +197,6 @@
 						</div>
 					</div>
 					<!-- <div class="col-md-12">
-						<div class="work-entry animate-box">
-							<a href="work-single.html" class="work-img" style="background-image: url(images/work-4.jpg);">
-								<div class="display-t">
-									<div class="work-name">
-										<h2>Black</h2>
-									</div>
-								</div>
-							</a>
-							<div class="col-md-4 col-md-offset-4">
-								<div class="desc">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-									<p class="read"><a href="#">View details</a></p>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-12">
 						<div class="work-entry animate-box">
 							<a href="work-single.html" class="work-img" style="background-image: url(images/work-5.jpg);">
 								<div class="display-t">
